--- a/style.css
+++ b/style.css
@@ -1,63 +1,74 @@
-html {
-    box-sizing: border-box;
-}
-
 body {
-    margin: 0;
-    min-height: 100vh;
-    background-color: rgba(213, 134, 239, 0.607);
-    font-size: 30px;
-}
-
-.title-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+	background: #a657f565;
+	margin: 0;
+	font-family: "Montserrat", "Avenir";
 }
 
 h1 {
-    color: white;
-    font-size: 3.5em;
+	color: white;
+	text-align: center;
+	background: steelblue;
+	margin: 0;
+	font-weight: normal;
+	text-transform: uppercase;
+	line-height: 1.1;
+	padding: 20px 0;
 }
 
-#color-display {
-    display: block;
-    font-size: 1.5em;
+#colorDisplay {
+	font-size: 200%;
 }
 
-button {
-    outline: none;
-    color: blueviolet;
-    text-transform: uppercase;
-    font-size: 1em;
-    background-color: aliceblue;
-    height: 100%;
-    letter-spacing: 1px;
-    transition: all 0.3s;
+#message {
+	display: inline-block;
+	width: 20%;
 }
 
-button:hover {
-    background-color: aquamarine;
-    color: aliceblue;
+.square {
+	width: 30%;
+	padding-bottom: 30%;
+	background: purple;
+	float: left;
+	margin: 1.66%;
+	border-radius: 20%;
+	transition: background 0.6s;
+	-webkit-transition: background 0.6s;
+	-moz-transition: background 0.6s;
+
 }
 
 #container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding-top: 20px;
-    padding-left: 20px;
+	margin: 20px auto;
+	max-width: 600px;
 }
 
-.square {
-    width: 30%;
-    background-color: blueviolet;
-    padding-bottom: 30%;
-    float: left;
-    margin:1.66%;
-    transition: background .5s;
+
+#nav{
+	background: white;
+	height: 30px;
+	text-align: center;
 }
 
-.square {
-    border-radius: 20%;
+.selected {
+	background: steelblue;
+	color: white;
+}
+button:hover {
+	background: steelblue;
+	color: white;
+}
+
+button {
+	border: none;
+	background: none;
+	text-transform: uppercase;
+	height: 100%;
+	font-weight: 700;
+	color: steelblue;
+	letter-spacing: 1px;
+	font-size: inherit;
+	transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	outline: none;
 }
