--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background: #a657f565;
+	background: #28272865;
 	margin: 0;
 	font-family: "Montserrat", "Avenir";
 }
@@ -7,7 +7,7 @@ body {
 h1 {
 	color: white;
 	text-align: center;
-	background: steelblue;
+	background: rgb(149, 70, 180);
 	margin: 0;
 	font-weight: normal;
 	text-transform: uppercase;
@@ -22,6 +22,9 @@ h1 {
 #message {
 	display: inline-block;
 	width: 20%;
+    color: rgb(27, 113, 183);
+    font-weight: 500;
+    font-size: 20px;
 }
 
 .square {
@@ -45,16 +48,16 @@ h1 {
 
 #nav{
 	background: white;
-	height: 30px;
+	height: 60px;
 	text-align: center;
 }
 
 .selected {
-	background: steelblue;
+	background: rgb(134, 37, 166);
 	color: white;
 }
 button:hover {
-	background: steelblue;
+	background: rgb(136, 70, 180);
 	color: white;
 }
 
@@ -64,7 +67,7 @@ button {
 	text-transform: uppercase;
 	height: 100%;
 	font-weight: 700;
-	color: steelblue;
+	color: rgb(164, 27, 171);
 	letter-spacing: 1px;
 	font-size: inherit;
 	transition: all 0.3s;
